BTWCT-1512: Fixed spacing on skulist title

--- a/waters-aem-frontend/src/styles/skudetails.scss
+++ b/waters-aem-frontend/src/styles/skudetails.scss
@@ -487,6 +487,13 @@
 .cmp-search__container {
     .cmp-sku-details__title {
         @include font-h3;
+        width: 70%;
+        @include tablet-and-under {
+            width: 60%;
+        }
+        @include mobile {
+            width: 100%;
+        }
     }
 }
 
